solved wordwrap in card div

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -47,3 +47,11 @@
     border-radius: 0 !important;
     
 }
+
+.card-text {
+    word-wrap: break-word;
+}
+
+.card {
+    max-width: 100%;
+}
